--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammad Attalariq | Computer Science Student</title>
-    <link rel="shortcut icon" href="/src/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -69,7 +69,7 @@
             <nav class="w-full relative z-50">
                 <div class="box-content flex justify-between h-24 items-center px-2">
                     <div class="w-80 flex items-center">
-                        <img class="box-content tablet:h-20 tablet:w-20 phone:w-16 phone:h-16" src="/src/images/favicon.ico" alt="logo" width="50"
+                        <img class="box-content tablet:h-20 tablet:w-20 phone:w-16 phone:h-16" src="/images/favicon.ico" alt="logo" width="50"
                             height="50" />
                         <p class="inline-flex font-semibold md:text-xl phone:text-base text-slate-700">Muhammad
                             Attalariq
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="nav-picture place-content-end phone:flex tablet:hidden">
-                        <img class="rounded-full relative w-20 h-full" src="/src/images/profile.jpg" alt="profile" />
+                        <img class="rounded-full relative w-20 h-full" src="/images/profile.jpg" alt="profile" />
                     </div>
 
                     <div class="links phone:hidden tablet:flex">
