--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                     <div class="tablet:grid phone:hidden place-content-center">
                         <img class="main-picture rounded-full tablet:flex phone:hidden w-72 max-h-screen"
-                            src="/src/images/profile.jpg" alt="profile" />
+                            src="/images/profile.jpg" alt="profile" />
                     </div>
 
                 </div>
